# VisionLangAnnotate

./: .gitignore  .pylintrc  README.md  pyproject.toml
ModelDev/: modeling_yolohf.py  modeling_yolohfdetr.py  modeling_yoloworld.py  multidatasets.py  multimodels.py  multimodels_train.py  multimodelsv2.py  myhf_yolomodel.py  register_yolo_model.py  test_rtdetrv2_kitti.py
VisionLangAnnotateModels/: README_two_step_pipeline.md  __init__.py  example_two_step_pipeline.py  export_to_label_studio.py  multimodels.py  multimodels_train.py  multimodelsv2.py  test_qwen_batch_processing.py  two_step_pipeline.py
VisionLangAnnotateModels/VLM/: README_VLM.md  README_qwen_optimization.md  __init__.py  compare_ocr_methods.py  create_test_pdf.py  prompts.py  (+35 more)
backend/: Dockerfile  VLM_API_REFERENCE.md  requirements.txt  test_vlm_api.py
docs/: mkdocs.yml  vllm-qwen2.5-vl-tutorial.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
tools/: Dockerfile  README_edgeaitool.md  checktorch.py  compile_edgeaitool.sh  edgeaitool  edgeaitool.sh  gradio_vlm.py  gradio_vlm_original.py  install_edgeaitool.sh  installedgeaitool.sh  run_all_tests.sh  run_docker_tests.sh  run_ollama_examples.sh  test_dynamic_image_inputs.py  test_image_processing_fix.py  test_image_resizing.py  test_minimal_vllm.py  test_simple_vllm_format.py  test_vllm.py  test_vllm_exact_format.py  test_vllm_local_image.py  test_vllm_package.py  test_vllm_package_qwenvl.py  test_vllm_simple_init.py  test_vlm_utils.py  test_vlm_utils_package_mode.py  test_vlm_vllm_utils.py  vlm_utils.py  vlm_vllm_utils.py
(+66 files in other folders)
