[project]
name = "VisionLangAnnotate"
version = "0.1.0"
description = "vision and language model, open vocabulary output, deep learning inference, annotation, python backend, fine-tuning and continuous improvement"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend.src"]