[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "VisionLangAnnotateModels"
version = "0.1.0"
description = "vision and language model, open vocabulary output, deep learning inference, annotation, python backend, fine-tuning and continuous improvement"
authors = [
    { name = "Kaikai Liu", email = "kaikai.liu@sjsu.edu" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "numpy"
]

[project.urls]
Homepage = "https://github.com/lkk688/VisionLangAnnotate"